--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,70 @@ assignment3/__pycache__/a3_utils.cpython-311.pyc
 assignment4/__pycache__/a4_utils.cpython-311.pyc
 assignment5/__pycache__/a5_utils.cpython-311.pyc
 assignment6/__pycache__/a6_utils.cpython-311.pyc
+assignment6/a6_demo.mp4
+assignment6/myData/originals/20240118_012413.jpg
+assignment6/myData/originals/20240118_012418.jpg
+assignment6/myData/originals/20240118_012423.jpg
+assignment6/myData/originals/20240118_012428.jpg
+assignment6/myData/originals/20240118_012442.jpg
+assignment6/myData/originals/20240118_012451.jpg
+assignment6/myData/originals/20240118_012454.jpg
+assignment6/myData/originals/20240118_012459.jpg
+assignment6/myData/originals/20240118_012507.jpg
+assignment6/myData/originals/20240118_012508.jpg
+assignment6/myData/originals/20240118_012515.jpg
+assignment6/myData/originals/20240118_012517.jpg
+assignment6/myData/originals/20240118_012524.jpg
+assignment6/myData/originals/20240118_012525.jpg
+assignment6/myData/originals/20240118_012529.jpg
+assignment6/myData/originals/20240118_012530.jpg
+assignment6/myData/transformed/ver1/0.jpg
+assignment6/myData/transformed/ver1/1.jpg
+assignment6/myData/transformed/ver1/2.jpg
+assignment6/myData/transformed/ver1/3.jpg
+assignment6/myData/transformed/ver1/4.jpg
+assignment6/myData/transformed/ver1/5.jpg
+assignment6/myData/transformed/ver1/6.jpg
+assignment6/myData/transformed/ver1/7.jpg
+assignment6/myData/transformed/ver1/8.jpg
+assignment6/myData/transformed/ver1/9.jpg
+assignment6/myData/transformed/ver1/10.jpg
+assignment6/myData/transformed/ver1/11.jpg
+assignment6/myData/transformed/ver1/12.jpg
+assignment6/myData/transformed/ver1/13.jpg
+assignment6/myData/transformed/ver1/14.jpg
+assignment6/myData/transformed/ver1/15.jpg
+assignment6/myData/transformed/ver2/0.jpg
+assignment6/myData/transformed/ver2/1.jpg
+assignment6/myData/transformed/ver2/2.jpg
+assignment6/myData/transformed/ver2/3.jpg
+assignment6/myData/transformed/ver2/4.jpg
+assignment6/myData/transformed/ver2/5.jpg
+assignment6/myData/transformed/ver2/6.jpg
+assignment6/myData/transformed/ver2/7.jpg
+assignment6/myData/transformed/ver2/8.jpg
+assignment6/myData/transformed/ver2/9.jpg
+assignment6/myData/transformed/ver2/10.jpg
+assignment6/myData/transformed/ver2/11.jpg
+assignment6/myData/transformed/ver2/12.jpg
+assignment6/myData/transformed/ver2/13.jpg
+assignment6/myData/transformed/ver2/14.jpg
+assignment6/myData/transformed/ver2/15.jpg
+assignment6/myData/transformed/ver3/0.jpg
+assignment6/myData/transformed/ver3/1.jpg
+assignment6/myData/transformed/ver3/2.jpg
+assignment6/myData/transformed/ver3/3.jpg
+assignment6/myData/transformed/ver3/4.jpg
+assignment6/myData/transformed/ver3/5.jpg
+assignment6/myData/transformed/ver3/6.jpg
+assignment6/myData/transformed/ver3/7.jpg
+assignment6/myData/transformed/ver3/8.jpg
+assignment6/myData/transformed/ver3/9.jpg
+assignment6/myData/transformed/ver3/10.jpg
+assignment6/myData/transformed/ver3/11.jpg
+assignment6/myData/transformed/ver3/12.jpg
+assignment6/myData/transformed/ver3/13.jpg
+assignment6/myData/transformed/ver3/14.jpg
+assignment6/myData/transformed/ver3/15.jpg
+assignment6/a6_demo.mp4
+assignment6/a6_demo_hq.mp4
