--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,4 @@ assignment6/myData/transformed/ver3/14.jpg
 assignment6/myData/transformed/ver3/15.jpg
 assignment6/a6_demo.mp4
 assignment6/a6_demo_hq.mp4
+vaje1/python_uvod.pdf
